--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "ionic-heroku",
-  "description": "Ionic Node.js Heroku app",
-  "version": "0.0.1",
-  "private": true,
-  "dependencies": {
-    "express": "~4.4.3"
-  }
+    "name": "ionic-heroku",
+    "description": "Ionic Node.js Heroku app",
+    "version": "0.0.1",
+    "private": true,
+    "dependencies": {
+        "express": "~4.4.3",
+        "firebase": "~3.8.0"
+    }
 }
